istio/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server
spec:
  selector:
    server: web
  ports:
    - port: 80
